overflow fix

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
     top: 0;
     left: 300px;
     right: 0;
-    bottom: 0;
+    bottom: 0; 
     background: rgba(0, 0, 0, 0.9);
     z-index: 50;
     overflow-y: auto; 
@@ -325,6 +325,7 @@ body {
         align-items: justify;
         padding-top: 80px !important; 
         overflow-y: auto;
+        overflow-x: hidden;
         background: rgba(0, 0, 0, 0.7);
     }
     .page h1 {
